// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Twitter Tweet Block should render Default 1`] = `
<DocumentFragment>
  <div
    class="emotion-0 emotion-1"
    data-theme="dark"
  >
    <div>
      Tweet Mock: {"id":"1600079498845863937"}
    </div>
  </div>
</DocumentFragment>
`;

exports[`Twitter Tweet Block should render WithClassName 1`] = `
<DocumentFragment>
  <div
    class="extra-classname emotion-0 emotion-1"
    data-theme="dark"
  >
    <div>
      Tweet Mock: {"id":"1600079498845863937"}
    </div>
  </div>
</DocumentFragment>
`;
